# zksync-airbender

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE.md  README.md  SECURITY.md  _typos.toml  build.sh  deny.toml  profile.sh  recreate_verifiers.sh  recursion.sh  rust-toolchain.toml
.cargo/: config.toml
.github/: pull_request_template.md
blake2s_u32/: Cargo.toml  show_asm.sh
circuit_defs/opcode_tests/: Cargo.toml
circuit_defs/opcode_tests/src/: lib.rs
circuit_defs/opcode_tests/src/data/: add-01.S
circuit_defs/opcode_tests/src/opcodes/: add.rs  addi.rs  and.rs  andi.rs  auipc.rs  beq.rs  bge.rs  bgeu.rs  blt.rs  bltu.rs  bne.rs  csrrw.rs  div.rs  divu.rs  jal.rs  jalr.rs  lb.rs  lbu.rs  lh.rs  lhu.rs  lui.rs  lw.rs  mul.rs  mulh.rs  mulhsu.rs  mulhu.rs  or.rs  ori.rs  rem.rs  remu.rs  sb.rs  sh.rs  sll.rs  slli.rs  slt.rs  slti.rs  sltiu.rs  sltu.rs  sra.rs  srai.rs  (+6 more)
cs/: Cargo.toml  bigint_delegation_layout.json  bigint_delegation_ssa.json  blake_delegation_ssa.json  full_machine_with_delegation_layout.json  full_machine_with_delegation_ssa.json  full_machine_with_delegation_without_signed_mul_div_layout.json  full_machine_with_delegation_without_signed_mul_div_ssa.json  minimal_machine_with_delegation_layout.json  minimal_machine_with_delegation_ssa.json
docs/: README.md  end_to_end.md  gpu.md  philosophy_and_logic.md  repo_layout.md  subarguments_used.md  tutorial.md
examples/basic_fibonacci/: Cargo.toml  README.md  app.elf  app.text  dump_bin.sh
examples/basic_fibonacci/.cargo/: config.toml
examples/basic_fibonacci/src/: main.rs
examples/basic_fibonacci/src/lds/: memory.x
examples/experiments/: .gitignore  Cargo.toml  README.md  objdump.sh  objdump_manual.sh
examples/experiments/.cargo/: config.toml
examples/experiments/src/: main.rs
examples/experiments/src/asm/: asm_reduced.S
examples/experiments/src/lds/: memory.x
execution_utils/: Cargo.toml  final_recursion_over_final_recursion_layer.json
execution_utils/src/: constants.rs  lib.rs
fft/: Cargo.toml
field/: Cargo.toml  NOTICE.md  README.md
full_statement_verifier/: Cargo.toml
full_statement_verifier/src/: constants.rs  lib.rs
gpu_prover/: Cargo.toml
gpu_prover/benches/: blake2s.rs
gpu_prover/native/: CMakeLists.txt  arg_utils.cuh  barycentric.cu  blake2s.cu  context.cu  context.cuh  field.cuh  field_bench.cu  memory.cuh  monolith.cu  ops_complex.cu  ops_complex.cuh  ops_simple.cu  stage2.cu  stage3.cu  stage4.cu  vectorized.cuh
gpu_prover/native/ntt/: bitrev_Z_to_natural_evals.cu  natural_evals_to_bitrev_Z.cu  ntt.cuh
gpu_prover/native/ops_cub/: common.cuh  device_radix_sort.cu  device_reduce.cu  device_run_length_encode.cu
gpu_prover/native/ops_cub/device_scan/: common.cuh  e_add_bf.cu  e_add_e4.cu  e_add_u32.cu  e_mul_bf.cu  e_mul_e4.cu  i_add_bf.cu  i_add_e4.cu  i_add_u32.cu  i_mul_bf.cu  i_mul_e4.cu
gpu_prover/native/witness/: column.cuh  common.cuh  layout.cuh  memory.cuh  memory_delegation.cu  memory_main.cu  multiplicities.cu  option.cuh  placeholder.cuh  ram_access.cuh  tables.cuh  trace.cuh  trace_delegation.cuh  trace_main.cuh  witness_generation.cuh
gpu_prover/native/witness/circuits/: bigint_with_control.cu  blake2_with_compression.cu  final_reduced_risc_v_machine.cu  machine_without_signed_mul_div.cu  reduced_risc_v_machine.cu  risc_v_cycles.cu  template_delegation.cuh  template_main.cuh
gpu_prover/src/: barycentric.rs  blake2s.rs  circuit_type.rs  context.rs  field_bench.rs  lib.rs  monolith.rs  ops_complex.rs  ops_simple.rs  tests.rs
gpu_prover/src/allocator/: allocation_data.rs  device.rs  host.rs  mod.rs  tracker.rs
gpu_prover/src/execution/: cpu_worker.rs  gpu_manager.rs  gpu_worker.rs  messages.rs  mod.rs  precomputations.rs  prover.rs  tracer.rs
gpu_prover/src/ntt/: bitrev_Z_to_natural_evals.rs  mod.rs  natural_evals_to_bitrev_Z.rs  tests.rs  utils.rs
gpu_prover/src/ops_cub/: device_radix_sort.rs  device_reduce.rs  device_run_length_encode.rs  device_scan.rs
gpu_prover/src/prover/: arg_utils.rs  context.rs  memory.rs  mod.rs  pow.rs  proof.rs  queries.rs  setup.rs  stage_1.rs  stage_2.rs  stage_2_kernels.rs  stage_3.rs  stage_3_kernels.rs  stage_4.rs  stage_4_kernels.rs  stage_5.rs  trace_holder.rs  tracing_data.rs  transfer.rs
gpu_prover/src/witness/: column.rs  layout.rs  memory_delegation.rs  memory_main.rs  mod.rs  multiplicities.rs  option.rs  placeholder.rs  ram_access.rs  trace_delegation.rs  trace_main.rs  witness_delegation.rs  witness_main.rs
gpu_witness_eval_generator/: Cargo.toml
non_determinism_source/: Cargo.toml
playground/: Cargo.toml
playground/src/: logger.rs  main.rs  old_tracer.rs
poseidon2/: ACKNOWLEDGEMENTS.md  Cargo.toml
poseidon2/benches/: basic.rs
poseidon2/src/: lib.rs
poseidon2/src/m31/: delegation.rs  mod.rs  naive.rs  poseidon2.rs
prover/: .gitignore  Cargo.toml  README.md  app.bin.bak  blake2_extended_delegation_oracle  blake2_single_round_delegation_oracle  blake2s_delegation_circuit_layout.json  blake_delegation_generated.rs  delegation_proof  full_machine_layout.json  (+4 more)
risc_v_simulator/: CHANGELOG.md  Cargo.toml  README.md
risc_v_simulator/src/: lib.rs  sim.rs
risc_v_simulator/src/abstractions/: csr_processor.rs  memory.rs  mod.rs  non_determinism.rs  tracer.rs
risc_v_simulator/src/cycle/: decoder_utils.rs  mod.rs  state.rs  state_new.rs  utils.rs
risc_v_simulator/src/delegations/: blake2_round_function_with_compression_mode.rs  mod.rs  u256_ops_with_control.rs
risc_v_simulator/src/delegations/unrolled/: blake2_round_function_with_compression_mode.rs  mod.rs  u256_ops_with_control.rs
risc_v_simulator/src/mmu/: mod.rs
risc_v_simulator/src/runner/: mod.rs
risc_v_simulator/src/tests/: mod.rs
tools/generator/: .gitignore  Cargo.toml  README.md
tools/generator/output/: bigint_with_control_witness_generation_fn.cuh  final_reduced_risc_v_machine_witness_generation_fn.cuh  machine_without_signed_mul_div_witness_generation_fn.cuh  reduced_risc_v_machine_witness_generation_fn.cuh
tools/generator/src/: all_layouts.rs  main.rs
(+357 files in other folders)
