[package]
name = "execution_utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
verifier_common = { workspace = true, features = ["proof_utils", "replace_csr"] }
risc_v_simulator = { workspace = true, features = ["delegation"] }
trace_and_split = { workspace = true }
serde = { workspace = true }
serde_json = "*"

[dev-dependencies]
prover_examples = { path = "../circuit_defs/prover_examples" }
bincode = { version = "1.3" }
# full_statement_verifier = { workspace = true }
# full_statement_verifier = { path = "../full_statement_verifier" }

[features]
debug = ["prover_examples/precheck_satisfied"]
debug_satisfiable = ["prover_examples/debug_satisfiable"]
extended_tests = []
# debug = ["prover_examples/precheck_satisfied", "prover_examples/debug_satisfiable"]
default = []
# default = ["extended_tests"]