[package]
name = "gpu_prover"
version.workspace = true
edition.workspace = true
build = "build/main.rs"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[build-dependencies]
cmake = "0.1"
era_cudart_sys = "0.154"

[dependencies]
blake2s_u32 = { workspace = true }
cs = { workspace = true }
fft = { workspace = true }
field = { workspace = true }
prover = { workspace = true, features = ["default"] }
trace_and_split = { workspace = true }
worker = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
era_cudart = "0.154"
era_cudart_sys = "0.154"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
nvtx = "1"
transpose = "0.2"

[features]
default = []
log_gpu_mem_usage = []
log_gpu_stages_timings = []

[dev-dependencies]
execution_utils = { workspace = true }
prover = { workspace = true, features = ["default", "test"] }
rand = { workspace = true, default-features = false }
trace_and_split = { workspace = true }
trace_holder = { workspace = true }
era_criterion_cuda = "0.2"
criterion = "0.5"
serial_test = "3"

[[bench]]
name = "blake2s"
harness = false

[[bench]]
name = "field"
harness = false

[[bench]]
name = "other"
harness = false
