[package]
name = "poseidon2"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
delegation = []
default = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "basic"
harness = false

[dependencies]
rand.workspace = true
field = { workspace = true, default-features = false }
non_determinism_source = { workspace = true }
unroll = { workspace = true }