[package]
name = "risc_v_simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ringbuffer = "*"
addr2line = "0.22"
object = "*"
memmap2 = "*"
inferno = "*"
blake2s_u32 = { workspace = true, optional = true }
cs = { workspace = true, default-features = false }
field = { workspace = true, optional = true }
poseidon2 = { workspace = true, optional = true }
rand = { workspace = true, features = ["std", "thread_rng", "std_rng"]}
ruint = { version = "1.12", optional = true }
serde = { workspace = true }

[dev-dependencies]
lib-rv32-asm = {git = "https://github.com/shamatar/lib-rv32.git" }

[features]
opcode_stats = []
cycle_marker = []
default = ["field"]
# default = ["delegation"]
delegation = ["blake2s_u32", "field", "poseidon2", "ruint"]

[[bin]]
name = "runner"
path = "bin/runner.rs"
