[package]
name = "opcode_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
prover = { workspace = true, features = ["prover"] }
lib-rv32-asm = {git = "https://github.com/shamatar/lib-rv32.git"}
field = { workspace = true }
risc_v_simulator = { workspace = true }
cs = { workspace = true, default-features = true, features = [
    "debug_evaluate_witness",
] }
setups = { workspace = true }
regex = "1.11.1"
