[package]
name = "zksync_os_basic_fibonacci"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
riscv_common = { path = "../../riscv_common"}

[profile.release]
lto = true

[workspace]