[package]
name = "experiments"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[workspace]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true
