[package]
name = "generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
prover = { workspace = true, features = ["prover"] }
serde = { workspace = true }
serde_json = { version = "*" }
verifier_generator = { workspace = true }
setups = { workspace = true }
witness_eval_generator = { workspace = true }
gpu_witness_eval_generator = { workspace = true }